## Version 4.0.0 ##
- Rewrote the addon from scratch as a fabric mod. Note that data is stored in the same way and thus it is save compatible (it is still a good idea to back up your worlds before updating).
- Removed the ability to play custom sounds. This will return in a future release, but for now the code was too messy to carry over through the rewrite.
- Removed wood bleach and wood stain.
- Changed the recipe for empty bottle racks to use an I shape instead of an X (high efficiency recipe uses siding on top and bottom and moulding everywhere else).
- Fixed an issue where addon leaves would not properly decay until updated.
- Fixed an issue where addon trees would generate two stumps when smashing a planter.
- Fixed an issue where the top and bottom textures of pergolas would not properly rotate with the model.